fix spacing

--- a/ContactUsPage/style.css
+++ b/ContactUsPage/style.css
@@ -1442,6 +1442,11 @@ margin-bottom: 20px;
 }
 @media only screen and (max-width: 500px) {
   main {
+    .width-200 {
+      p{
+        font-size: 13px;
+      }
+    }
   .sm-height {
     height: fit-content;
 }
